[gd_scene load_steps=2 format=2]

[ext_resource path="res://lython/main.gd" type="Script" id=1]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Page" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="Page"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="MenuButton" type="MenuButton" parent="Page/Header"]
margin_right = 48.0
margin_bottom = 20.0
text = "Menu"

[node name="Body" type="Panel" parent="Page"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 582.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftSplit" type="HSplitContainer" parent="Page/Body"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -300

[node name="LeftPanel" type="Panel" parent="Page/Body/LeftSplit"]
margin_right = 206.0
margin_bottom = 558.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Page/Body/LeftSplit/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
tab_align = 0
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="RightSplit" type="HSplitContainer" parent="Page/Body/LeftSplit"]
margin_left = 218.0
margin_right = 1024.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200

[node name="TabContainer" type="TabContainer" parent="Page/Body/LeftSplit/RightSplit"]
margin_right = 597.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="GraphEdit" type="GraphEdit" parent="Page/Body/LeftSplit/RightSplit/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
scroll_offset = Vector2( -200, -522 )

[node name="RightPanel" type="Panel" parent="Page/Body/LeftSplit/RightSplit"]
margin_left = 609.0
margin_right = 806.0
margin_bottom = 558.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Page/Body/LeftSplit/RightSplit/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
tab_align = 0
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="Footer" type="HBoxContainer" parent="Page"]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Status" type="Label" parent="Page/Footer"]
margin_right = 39.0
margin_bottom = 14.0
text = "Status"

[connection signal="item_rect_changed" from="." to="." method="_on_Control_item_rect_changed"]
[connection signal="resized" from="." to="." method="_on_Control_resized"]
